# friendzones

./: Cargo.toml  README.md  flake.nix  happ.nix  package.json  pnpm-lock.yaml
dnas/friendzones/: dna.nix
dnas/friendzones/workdir/: dna.yaml
dnas/friendzones/zomes/coordinator/friendzones/: Cargo.toml  zome.nix
dnas/friendzones/zomes/coordinator/friendzones/src/: friends.rs  lib.rs  private_event.rs
dnas/friendzones/zomes/integrity/friendzones/: Cargo.toml  zome.nix
tests/src/: app-path.ts
tests/src/friendzones/friendzones/: setup.ts
ui/: index.html  package.json
ui/src/: holochain-app.ts  home-page.ts
ui/src/friendzones/friendzones/: context.ts  friendzones-client.ts  friendzones-store.ts  mocks.ts  types.ts
ui/src/friendzones/friendzones/elements/: friendzones-context.ts  timezone-prompt.ts
workdir/: happ.yaml  web-happ.yaml
